--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,9 +1,6 @@
-/*img.resize {
-    width:154px;  you can use % 
-    height: auto;
+ul li {
+  display: inline;
 }
-*/
-
 
 /* Space out content a bit */
 body {
